syntax = "proto3";

option go_package="github.com/Kiyosh31/ms-ecommerce/product-service/productPb";

package productPb;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (ProductResponse);
}

message Product {
  string id = 1;
  float price = 2;
  string description = 3;
}

message ProductResponse {
  string message = 1;
  Product product = 2;
}

message CreateProductRequest {
  Product product = 1;
}

message GetProductRequest {
  string productId = 1;
}

message UpdateProductRequest {
  string productId = 1;
}

message DeleteProductRequest {
  string productId = 1;
}